# metamod-launcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/launcher/: CMakeLists.txt  launcher.rc  main.cpp
src/linux-loader/: CMakeLists.txt  main.cpp
src/loader/: CMakeLists.txt  main.cpp
